tests/cases/errors/cpp_emit_unsupported_binary_op/main.sv
module Top;
  int a;
  int b;
  initial begin
    a = a - b;
  end
endmodule
